# learnrust

./: .gitignore  .gitmodules  Cargo.toml  dataframe.xlsx
args_parse/: Cargo.toml
args_parse/examples/: raw_args.rs
args_parse/src/: main.rs
ascii/src/: main.rs
for-loop/src/: main.rs
guess/: Cargo.toml
guess/src/: main.rs
iterator_demo/examples/: fib.rs
iterator_demo/src/: main.rs
mem_demo/: Cargo.toml
mem_demo/src/: main.rs
network/src/: main.rs
polars-demo/: Cargo.toml
polars-demo/examples/: write_excel.rs
polars-demo/src/: main.rs
polars-demo/tests/: excel.xlsx  metric.xlsx
rc/src/: main.rs
read/examples/: read.rs
read/src/: main.rs
ref_borrow_demo/: Cargo.toml
ref_borrow_demo/src/: main.rs
regex_demo/: Cargo.toml
regex_demo/src/: main.rs
rust_file_study/: Cargo.toml  a.txt
rust_file_study/src/: main.rs
serde_json_demo/: Cargo.toml
serde_json_demo/src/: main.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
test_seq_extract/: Cargo.toml
test_seq_extract/src/: main.rs
the_algorithms/: Cargo.toml
the_algorithms/src/: binary_search.rs  lib.rs
vec_demo/src/: main.rs
