[workspace]
members = [
    "for-loop",
    "guess",
    "serde_json_demo",
    "vec_demo",
    "ref_borrow_demo",
    "iterator_demo",
    "mem_demo",
    "tcpserver",
    "tcpclient",
    "network",
    "the_algorithms",
    "args_parse",
    "read",
    "rust_file_study",
    "ascii",
    "rc",
    "polars-demo", "regex_demo",
]

resolver = "2"
